--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   },
   "devDependencies": {
     "gulp": "~3.8.7",
+    "gulp-beautify": "^1.1.2",
     "gulp-bump": "~0.1.11",
     "gulp-coffee": "~1.4.3",
     "gulp-concat": "~2.2.0",
     "gulp-header": "~1.0.2",
+    "gulp-jsbeautifier": "0.0.4",
     "gulp-mocha-phantomjs": "~0.2.0",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "~0.3.0",
