--- a/package.json
+++ b/package.json
@@ -15,15 +15,23 @@
     "build": "gulp build"
   },
   "devDependencies": {
+    "event-stream": "^3.3.0",
     "gulp": "~3.8.7",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-beautify": "^1.1.2",
     "gulp-bump": "~0.1.11",
     "gulp-coffee": "~1.4.3",
     "gulp-concat": "~2.2.0",
+    "gulp-cssbeautify": "^0.1.3",
     "gulp-header": "~1.0.2",
     "gulp-jsbeautifier": "0.0.4",
+    "gulp-merge": "^0.1.0",
+    "gulp-minify-css": "^1.0.0",
     "gulp-mocha-phantomjs": "~0.2.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^1.3.3",
     "gulp-sourcemaps": "^1.5.0",
+    "gulp-template-compile": "^1.0.0",
     "gulp-uglify": "~0.3.0",
     "gulp-util": "~2.2.14",
     "gulp-watch": "^4.1.1",
