--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "build": "gulp build"
   },
   "devDependencies": {
+  	"coffee-script": "^1.9.0",
     "event-stream": "^3.3.0",
-    "gulp": "~3.8.7",
+    "gulp": "~3.9",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-beautify": "^1.1.2",
     "gulp-bump": "~0.1.11",
